// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $0.20
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expesnse 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $2.00
  </h1>
</div>
`;
